--- a/src/components/loveProject/lNavBar/lDropDown/lDropDown.css
+++ b/src/components/loveProject/lNavBar/lDropDown/lDropDown.css
@@ -1,62 +1,47 @@
-.ulDropDown {
-  display: flex;
-  height: 100%;
-  text-align: left;
-  display: inline;
-  margin: 0;
-  padding: 15px 4px 17px 0px;
-  list-style: none;
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+.lDropDown{
+    position: relative;
+    min-width: 150px;
+    width: 100%;
+    display: flex;
+    padding: 5px;
 }
-.ulDropDown li {
-  font: bold 12px/18px sans-serif;
-  display: inline-block;
-  margin-left: -4px;
-  bottom: 0px;
-  position: relative;
-  padding: 10px 10px;
-  cursor: pointer;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  -ms-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
+.lDCurrent {
+    display: flex;
+    width: 100%;
 }
-.ulDropDown li:hover {
-  background: #555;
-  color: #fff;
+.lDFirstImg {
+    width: 100%;
+    text-align:justify
 }
-.ulDropDown li .ulDropDown {
-  padding: 0;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  width: 150px;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  display: none;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transiton: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -ms-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
-  -transition: opacity 0.2s;
+.lDFirstImg img {
+    width: 35px;
 }
-.ulDropDown li .ulDropDown li { 
-  bottom: 0px;
-  padding: 15px 20px;
-  background: #555; 
-  display: block; 
-  color: #fff;
-  text-shadow: 0 -1px 0 #000;
+.lDFirstImg + div img {
+    width: 15px;
 }
-.ulDropDown li .ulDropDown li:hover { background: #666; }
-.ulDropDown li:hover .ulDropDown {
-  display: block;
-  opacity: 1;
-  visibility: visible;
+
+.lDCollapse {
+    position: absolute;
+    min-width: 150px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: solid 1px silver;
+    border-top: none;
+    background-color: white;
+    top:100%;
+    left: -1px;
+    overflow: hidden;
+    transition: height 0.25s;
+}
+
+.lDElement {
+    display: flex;
+    font-size: 15px;
+    padding-top: 5px;
+    margin: 5px;
+}
+
+.lDElement img {
+    width:25px;
+    margin-right: 10px;
 }
