--- a/src/components/loveProject/lNavBar/lNavBar.css
+++ b/src/components/loveProject/lNavBar/lNavBar.css
@@ -3,17 +3,15 @@
   position: fixed;
   width: 100%;
   flex-direction: column;
-  font-family: Arial;
 }
 .navCollapse {
-  font-family: "core_sans_regular";
   display: flex;
   box-sizing: border-box;
   width: 100%;
   color:white;
-  background-color: #25282A;
+  background-color: rgb(36, 39, 41);
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 10px;;
 }
 .navLeftElment {
   display: flex;
@@ -65,23 +63,39 @@
 /* white navbar management ***************/
 .lnavWhite {
   display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: white;
-  padding: 15px;
+  padding: 8px;
+  font-size: 14px;
 }
 .lnavSign {
   width: 100%;
-  text-align: justify;
-  font-size: 14px;
 }
-.lnavSign + select {
-  width: 100px;
-  background-color: white;
-  border: none;
-  font-size: 13px;
+.lnavSign div {
+  width: 150px;
+  font-size: 15px;
+  padding: 10px;
+  font-weight: bold;
+  border-radius: 0.4em;
+  padding-left: 10px;
+  padding-right: 10px;
+  border:solid 1px
 }
-.lnavSign + select + div {
-  width: 100px;
-  font-size: 14px;
+.lnavSign + div {
+  width: 150px;
+}
+.lnavSign + div + div {
+  width: 120px;
+  padding-left: 10px;
+  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lnavSign + div + div img {
+  width: 30px;
+  margin-right:10px;
 }
 
 
@@ -116,7 +130,6 @@
     transition: height 0.4s, padding-top 0.4s;  
   }
   .navDropDown > div {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     padding: 15px;
     padding-left: 0px;
     border-bottom:solid white 2px;
@@ -153,13 +166,13 @@
     justify-content: center;
     align-items: center;
   }
-  .navBar2right .navLeng {
+  .navBar2right .navLang {
     margin-right: 60px;
   }
   .navBar2right .navProfile {
     width: 30px;
     height: 30px;
-    background-color:gray;
+    background-color:rgb(35, 38, 40);
     border-radius: 4em;
     position: absolute;
     margin-right: 10px;
