--- a/src/components/loveProject/lProfileCard/lProfileCard.css
+++ b/src/components/loveProject/lProfileCard/lProfileCard.css
@@ -2,8 +2,7 @@
 width: 280px;
 background-color: #254150;
 font-size: 12px;  
-color:white;
-font-family: "core_sans_regular", Arial, Helvetica, sans-serif; 
+color:rgb(254, 249, 206);
 display: flex;
 flex-direction: column;
 border-radius: 0.2em;
@@ -108,7 +107,7 @@ border-radius: 0.2em;
 }
 .lpcRanking + div +div   {
   width: 100%;
-  color:white;
+  color:rgb(254, 249, 206);
   text-align: justify;
 } 
 .lpcRanking + div +div +div {
