--- a/src/components/loveProject/lRanking/lRanking.css
+++ b/src/components/loveProject/lRanking/lRanking.css
@@ -65,7 +65,7 @@ padding: 15px;
   align-items: center;
   font-size: 13px;
   padding: 10px;
-  color: white;
+  color: rgb(254, 249, 206);
   border-left: solid 6px transparent;
 }
 .lraRanking {
@@ -83,7 +83,7 @@ padding: 15px;
   width: 100%;
   color: #92D1D3; 
   text-align: justify;
-  font-size: 12px;
+  font-size: 13px;
   font-weight: bold;
 } 
 .lraRanking + div +div +div {
@@ -102,7 +102,6 @@ padding: 15px;
   border-radius: 0.3em;
   background-color: #0C1B23;
   font-size: 12px;
-  font-weight: bold;
   transition: background-color 0.2s;
 }
 
