--- a/src/components/loveProject/loveProject.css
+++ b/src/components/loveProject/loveProject.css
@@ -4,31 +4,63 @@
     top:0px;
     width: 100%;
 }
-.publiClass {
-    background-image: url('./wall.jpg');
+.publish {
+    height: 100px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding-left:20px ;
+}
+.publish div {
+    color: #92D1D3; 
+    border:solid 1px;
+    font-size: 13px;
+    padding: 11px;
+    border-radius: 0.3em;
+    background-color: #0C1B23;
+    font-size: 12px;
+    font-weight: bold;
+    transition: background-color 0.2s;
+}
+h2 {
+    margin-top:100px;
+    text-align: justify;
+    padding-left: 20px;
+}
+.pubClass {
+    background-color:white;
 }
 .publications {
-    margin-top: 20px;
     display: flex;
     justify-content: center;
-    align-items: center;    
-    background-image: url('./wall.jpg');
+    align-items: center;
+    padding-left:20px ;
+    padding-right:20px ;
+    background-color: white;
 }
 .publications > div {
-    margin: 10px;
-    width: 25%;
+    margin: 9px;
+    width: 33.33%;
     width: 100%;
 }
 .sliderClass {
-    margin-right: 10px;
+    margin-right: 30px;
     display: flex;
     justify-content: right;
     align-items: center;
+    position: relative;
+}
+.seeAll {
+    position: absolute;
+    left:35px;
+    color:red;
+    font-size: 13px;
 }
 
 /* --------- second zoe ----------------------------- */
 .secondZone {
     display: flex;
+    margin-top: 10px;
 }
 .secondFirst {
     display: flex;
@@ -40,6 +72,14 @@
 .secondFirst + div {
     width: 30%;
     padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.secondFirst + div img {
+    box-sizing: border-box;
+    padding-top: 10%;
+    width: 100%;
+    height: 100%;
 }
 .secondVoid {
     height: 200px;
