--- a/src/components/loveProject/lNavBar/buttonA12/buttonA12.css
+++ b/src/components/loveProject/lNavBar/buttonA12/buttonA12.css
@@ -7,7 +7,7 @@
   border-radius: 0.3em;
   border: none;
   color: white;
-  font-size: 1vw;
+  font-size: 13px;
   cursor: pointer;
   transition: color 0.5s;
 }
