--- a/src/components/publication/publication.css
+++ b/src/components/publication/publication.css
@@ -1,3 +1,206 @@
 .publication {
-    padding: 100px
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #F0F2F5;
+}
+.pBody {
+    margin-top: 40px;
+    max-width: 800px;
+    background-color: #F0F2F5;
+}
+.pBody > div{
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+    margin-bottom: 30px;
+}
+.pInfo {
+    padding-bottom: 10px;
+}
+.pImage img {
+    width: 100%;
+}
+.pTitle {
+
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: justify;
+    width: 90%;
+}
+.pText {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+    text-align: justify;
+    font-size: 16px;
+}
+
+.pAuthor {
+    margin-top: 30px;
+    margin-right: 30px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+.pBy {
+    font-weight: bold;
+    font-size: 20px;
+    margin-right:20px ;
+    font-family: 'gooddp';
+}
+.pBy + div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pProfile {
+    width: 70px;
+    height: 70px;
+    border-radius:10em;
+    overflow: hidden;
+    box-shadow: 0px 0px 1px gray;
+    background-color: silver;
+}
+.pProfile img {
+    width: 85%;
+}
+.pNameZone {
+    margin-right: 10px;
+}
+@font-face {
+    font-family: 'gooddp';
+    src: url('./font/MrDeHaviland-Regular.ttf');
+}
+.pAthName {
+    font-family: 'gooddp';
+    font-weight: bold;
+    font-size: 20px;
+}
+.pDate {
+    font-size: 13px;
+}
+
+/*----- second row ----------------*/
+.pStats {
+    box-sizing: border-box;
+    border: solid 1px silver;
+    width: 100%;
+    padding: 20px;
+    padding-top: 0px;
+}
+.pStatsFirst {
+    display: flex;
+    padding: 10px;
+}
+.pReactLogo {
+    width: 50%;
+    text-align: left;
+    display: flex;
+}
+.pReactLogo div {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin-right:10px;
+}
+.pReactLogo img {
+    width: 20px;
+}
+
+.pReactLogo + div {
+    text-align: right;
+    width: 50%;
+}
+
+.pStatsFirst + div {
+    border-top: solid 1px silver ;
+    box-sizing: border-box;
+    display: flex;
+    width: 100%;
+    padding: 10px;
+}
+.pStatsFirst + div > div {
+    width: 33.33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pStatsFirst + div > div div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    margin-right: 10px;
+}
+.pStatsFirst + div > div img {
+    width: 100%;
+}
+
+.pStatsFirst + div + div {
+    box-sizing: border-box;
+    padding: 10px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    border-top: solid 1px silver ;
+}
+.debateWinner {
+    width: 70px;
+    position: relative;
+}
+.debateWinnerImage {
+    border-radius: 5em;
+    width: 70px;
+    height: 70px;
+    background-color: gray;
+    overflow: hidden;
+}
+.debateWinnerImage img {
+    width: 85%;
+}
+.debateWinnerImage + div {
+    position: absolute;
+    width: 30px;
+    border: solid 1px silver;
+    border-radius: 1em;
+    background-color: silver;
+    font-size: 13px;
+    left: 100%;
+    top:0%;
+    margin-left: -12px;
+}
+.debateWinnerImage + div + div {
+    position: absolute;
+    width:40px;
+    left: 50%;
+    margin-left: -20px;
+    margin-top: -10px;
+}
+.debateWinnerImage + div + div img {
+    width:100%;
+}
+
+/* ---- third part --------- */
+.pCom {
+    padding: 20px
+}
+.pSort {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pSort > div {
+    width: 200px;
+    margin-left:15px ;
+    margin-right:15px ;
+}
+.pCommentZone {
+    min-height: 100px;
+}
+.pCommentZone > div {
+    margin: 10px;
 }
