--- a/src/components/loveProject/lPublication/lPublication.css
+++ b/src/components/loveProject/lPublication/lPublication.css
@@ -2,7 +2,7 @@
   width: 100%;
   background-color: #F5F5F6;
   overflow: hidden;
-  color: rgb(40, 40, 40)
+  color: rgb(40, 40, 40);
 }
 .lPType {
   font-size: 13px;
