--- a/src/components/global/lDropDown/lDropDown.css
+++ b/src/components/global/lDropDown/lDropDown.css
@@ -1,48 +1,50 @@
-.plDropDown{
+.lDropDown{
     position: relative;
-    min-width: 200px;
+    min-width: 0px;
     width: 100%;
+    width: 120px;
     display: flex;
     padding: 5px;
     border: solid 1px silver;
 }
-.plDropDown .lDCurrent {
+.lDCurrent {
     display: flex;
     width: 100%;
 }
-.plDropDown .lDFirstImg {
+.lDFirstImg {
     width: 100%;
     text-align:justify
 }
-.plDropDown .lDFirstImg img {
-    width: 35px;
+.lDFirstImg img {
+    width: 21px;
 }
-.plDropDown .lDFirstImg + div img {
+.lDFirstImg + div img {
     width: 15px;
 }
 
-.plDropDown .lDCollapse {
+.lDCollapse {
+    box-sizing: border-box;
     position: absolute;
-    min-width: 200px;
+    min-width: 120px;
     padding-left: 5px;
-    padding-right: 5px;
+    padding-right: 4px;
     border: solid 1px silver;
     border-top: none;
     background-color: white;
     top:100%;
-    left: -1px;
+    left:-1px;
     overflow: hidden;
     transition: height 0.25s;
 }
 
-.plDropDown .lDElement {
+.lDElement {
     display: flex;
-    font-size: 15px;
+    font-size: 14px;
     padding-top: 5px;
     margin: 5px;
 }
 
-.plDropDown .lDElement img {
-    width:25px;
+.lDElement img {
+    width:15px;
     margin-right: 10px;
 }
