--- a/src/components/loveProject/loveProject.css
+++ b/src/components/loveProject/loveProject.css
@@ -5,47 +5,52 @@
     width: 100%;
 }
 .publish {
-    height: 150px;
+    padding: 20px;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-    padding-left:20px ;
     background-color: #0C1B23;
 }
 .publish div {
     color: #92D1D3; 
     border:solid 1px;
     font-size: 13px;
-    padding: 11px;
+    padding: 10px;
     border-radius: 0.3em;
     background-color: #0C1B23;
     font-size: 12px;
-    font-weight: bold;
     transition: background-color 0.2s;
+    margin: 0px;
 }
 h2 {
     background-color: #0C1B23;
     text-align: justify;
-    padding-left: 20px;
+    padding: 20px;
     margin: 0px;
+    background-color: white;
 }
 .pubClass {
-    background-color: #0C1B23;
+    background-color: white;
+    padding: 20px;
 }
 .publications {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left:20px ;
-    padding-right:20px ;
-    background-color: gray;
-    background-color: #0C1B23;
+    background-color: white;
+    flex-wrap: wrap;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .publications > div {
     width: 50%;
-    margin: 100px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .sliderClass {
+    padding: 30px;
     margin-right: 30px;
     display: flex;
     justify-content: right;
@@ -76,12 +81,6 @@ h2 {
     padding-right: 30px;
     display: flex;
     flex-direction: column;
-}
-.secondFirst + div img {
-    box-sizing: border-box;
-    padding-top: 10%;
-    width: 100%;
-    height: 100%;
 }
 .secondVoid {
     height: 200px;
