--- a/src/components/publication/pComment/pComment.css
+++ b/src/components/publication/pComment/pComment.css
@@ -6,7 +6,8 @@
    /* max-width: 500px;µ*/
    position: fixed;
    background-color: white;
-   width: 800px;
+   max-width: 800px;
+   width: 100%;
    bottom: 0px;
 }
 .pComment div {
