--- a/src/components/global/lPblicationForm/lPblicationForm.css
+++ b/src/components/global/lPblicationForm/lPblicationForm.css
@@ -1,6 +1,10 @@
 .lPblicationForm {
+    position: fixed;
+    top:50px;
+    left: 100px;
     width: 500px;
     border: solid 1px silver;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .lPBFCTitle {
     font-weight: bold;
@@ -18,7 +22,7 @@
     margin-right: 10px;
     margin-top: -15px;
     border-radius: 5em;
-    background-color: silver;   
+    background-color: lightgrey;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +53,9 @@
     height: 50px;
     border: none;
     padding: 10px;
-    background-color: #ebebf3;
+    font-size: 14px;
+    font-weight: bold;
+    background-color: rgb(240, 240, 240);
 }
 .lPBFCType + div + div textarea {
     box-sizing: border-box;
@@ -57,16 +63,32 @@
     height: 100px;
     border: none;
     padding: 10px;
-    background-color: #ebebf3;
+    font-size: 14px;
+    background-color: rgb(240, 240, 240);
 }
-.lPBFCType + div + div + div {
-    text-align: justify;
+.lPBFCType + div + div + div label {
+    display: flex;
+    justify-content: left;
+    align-items: center ;
 }
 .lPBFCType + div + div + div input {
-    border: none;
+    display: none;
+}
+.lPBFCType + div + div + div img {
+    width: 20px;
+    margin-left: 10px;
 }
 .lPBFCType + div + div + div + div {
     background-color: lightgrey;
     border-radius:0.4em;
     padding: 10px;
+}
+
+/* now hover effects -------*/
+.lPBFCType + div + div + div label {
+    cursor: pointer;
+}
+.lPBFCType + div + div + div + div:hover, .lPBFCCross:hover {
+    cursor: pointer;
+    background-color: rgb(175, 172, 172);
 }
