--- a/src/components/global/lDropDown/lDropDown.css
+++ b/src/components/global/lDropDown/lDropDown.css
@@ -1,11 +1,12 @@
 .lDropDown{
     position: relative;
-    min-width: 0px;
-    width: 100%;
     width: 120px;
     display: flex;
     padding: 5px;
     border: solid 1px silver;
+    box-sizing: border-box;
+    font-size: 14px;
+    word-break: normal;
 }
 .lDCurrent {
     display: flex;
@@ -25,7 +26,7 @@
 .lDCollapse {
     box-sizing: border-box;
     position: absolute;
-    min-width: 120px;
+    width: 120px;
     padding-left: 5px;
     padding-right: 4px;
     border: solid 1px silver;
@@ -39,7 +40,6 @@
 
 .lDElement {
     display: flex;
-    font-size: 14px;
     padding-top: 5px;
     margin: 5px;
 }
