--- a/src/components/global/lNavBar/lNavBar.css
+++ b/src/components/global/lNavBar/lNavBar.css
@@ -8,7 +8,6 @@
 }
 .navCollapse {
   display: flex;
-  box-sizing: border-box;
   width: 100%;
   color:white;
   background-color: rgb(36, 39, 41);
@@ -96,7 +95,6 @@
 .navBellN {
 }
 .navlDropDown {
-  border: solid 1px rgb(36, 39, 41);
 }
 .navlDropDown + div {
   width: 70px;
@@ -108,7 +106,10 @@
   width: 20px;
   margin-right:10px;
 }
-
+/* ------ */
+.navLangDrop2 {
+  display: none;
+}
 
 
 /* now managment of the responsive */
@@ -123,6 +124,8 @@
     font-family: "core_sans_regular";
     display: flex;
     box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
     /* position:absolute; */
     left: 0px;
     top:0px;
@@ -189,8 +192,13 @@
     margin-right: 10px;
     right: 0px;
     background-image: url('./profile.svg');
-    background-size: 80%;
+    background-size: 75%;
     background-position: center;
     background-repeat: no-repeat;
+  }
+  @media screen and (max-width: 501px){ 
+    .navLogo2 img{
+      width: 100px;  
+    }
   }
 }
