--- a/src/components/global/lPublication/lPublication.css
+++ b/src/components/global/lPublication/lPublication.css
@@ -9,6 +9,7 @@
   color: rgb(40, 40, 40);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   font-family: designGraffitiCMS;
+  word-break: break-all;
 }
 .lPType {
   font-size: 13px;
@@ -82,7 +83,7 @@
 
 .lPOption  {
   display: flex;
-  font-size: 14px;
+  font-size: 13px;
   padding: 10px;
   padding-bottom: 20px;
   margin-top: 10px
@@ -91,7 +92,6 @@
   display: flex;
   align-items: center;
   width: 33.333%;
-  font-size: 13px;
   margin: 2px;
   padding-left: 5px;
   overflow: hidden;
@@ -111,7 +111,7 @@
   padding: 4px;
 }
 .lPPoint +div + div {
-  justify-content: right;
+  justify-content: flex-end
 }
 .lPPoint div {
   display: flex;
@@ -152,4 +152,27 @@
   border: solid 1px yellow;
   cursor: pointer;
   transform: scale(1.3,1.3);
+}
+
+
+/*----- responsive managment zone... ------------------ */
+@media screen and (max-width: 700px) {
+  .lPType {
+    font-size: 12px;
+    padding: 2px;
+  }
+  .lPDate {
+    font-size: 13px;
+  }
+  .lPTitle {
+    font-size: 16px;
+    width: 85%;
+  }
+  .lPText {
+    font-size: 14px;
+    width: 95%;
+  }
+  .lPOption  {
+    font-size: 12px;
+  }
 }
