--- a/src/components/global/listReactor/listReactor.css
+++ b/src/components/global/listReactor/listReactor.css
@@ -1,13 +1,16 @@
 .listReactor {
   position: fixed;
-  right:5%;
-  top: 5%;
+  left:50%;
+  top: 50%;
+  width: 400px;
+  height: 480px;
+  margin-top: -240px;
+  margin-left: -200px;
   background-color: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  width: 400px;
-  height: 80%;
   overflow-y: scroll;
   overflow-x:hidden ;
+  display: none;
 }
 .lrHeader {
   background-color: #25282A;
