--- a/src/components/loveProject/lProfileCard/lProfileCard.css
+++ b/src/components/loveProject/lProfileCard/lProfileCard.css
@@ -1,5 +1,5 @@
 .lProfileCard {
-width: 280px;
+width: 100%;
 background-color: #254150;
 font-size: 12px;  
 color:rgb(254, 249, 206);
@@ -52,8 +52,9 @@ border-radius: 0.2em;
   text-align: justify;
 }
 .lpcFlag {
+  width: 100%;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items:center;
   padding-right: 12px;
   font-size: 38px;  
