--- a/src/components/loveProject/lPublication1/lPublication1.css
+++ b/src/components/loveProject/lPublication1/lPublication1.css
@@ -1,8 +1,4 @@
-@font-face {
-  font-family: 'designGraffitiCMS';
-  src: url('~@/assets/fonts/design.graffiti.comicsansms.ttf');
-}
-.lPublication1 {
+  .lPublication1 {
   display: flex;
   width: 100%;
   color:white;
@@ -33,8 +29,7 @@
   transition: transform 1s;
 }
 .lP1Date {
-  width: 70%;
-    font-size: 13px;
+  font-size: 13px;
   text-align: justify;
   padding: 0px;
   margin: 0px;
@@ -146,54 +141,56 @@
 
 /* ------- responsive ------------------------*/
 @media screen and (max-width: 1301px){
-  .lP1Date {
-    font-size: 14px;
-  } 
-  .lP1Date span {
-    font-size: 15px;
-  }
   .lP1Stars {
     margin-top: 5px;
   }
   .lP1Title {
-    font-size: 19px;
-    line-height: 26px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-  .lP1Text {
-    font-size: 15px;
+    font-size: 20px;
+    margin-top: 4px;
+    margin-bottom: 4px;
   }
 }
 @media screen and (max-width: 1090px){ 
   .lP1Title {
-    font-size: 18px;  
+    font-size: 19px;
   }
 }
-@media screen and (max-width: 900px){ 
-  .lPublication1 {
+@media screen and (max-width: 901px){ 
+  .lPublication1  {
     flex-direction: column;
     padding: 0%;
     padding-left: 2%;
     padding-right: 2%;
     padding-top: 45px;
+    padding-bottom: 60px;
   }
   .lPublication1 > div {
     width: 100%;
     box-sizing: border-box;
     padding: 0%;
   }
+  .lP1Second {
+    justify-content: left;
+  }
   .lP1Title {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    font-size: 20px;
+    margin-top: 10px;
   }
   .lP1Plus div {
     left: 0px;
     top: 0px;
   }
+  .lP1Date {
+    margin-top: 10px;
+    font-size: 10px;
+  }
+  .lP1Text {
+    margin-bottom: 20px;
+    font-size: 14px;
+  }
 }
-@media screen and (max-width: 900px){ 
+@media screen and (max-width: 700px){ 
   .lP1Title {
-    font-size: 18px;
+    font-size: 19px;
   }
 }
