--- a/src/components/loveProject/loveProject.css
+++ b/src/components/loveProject/loveProject.css
@@ -3,9 +3,13 @@
     left: 0px;
     top:0px;
     width: 100%;
+    word-break: break-all;
+}
+.main div {
+    box-sizing: border-box;
 }
 .publish {
-    padding: 20px;
+    padding: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,7 +35,7 @@ h2 {
 }
 .pubClass {
     background-color: white;
-    padding: 20px;
+    padding: 2%;
 }
 .publications {
     display: flex;
@@ -39,27 +43,30 @@ h2 {
     align-items: center;
     background-color: white;
     flex-wrap: wrap;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 .publications > div {
     width: 50%;
     box-sizing: border-box;
     margin-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 .sliderClass {
-    padding: 30px;
-    margin-right: 30px;
+    max-width: 100%;
+    padding-top: 30px;  
+    padding-bottom: 30px;
+    margin-right: 3%;
+    margin-left: 3%;
     display: flex;
-    justify-content: right;
+    justify-content:flex-end;
     align-items: center;
     position: relative;
 }
 .seeAll {
     position: absolute;
-    left:35px;
+    left:0px;
     color:red;
     font-size: 13px;
 }
@@ -72,15 +79,11 @@ h2 {
 .secondFirst {
     display: flex;
     flex-direction: column;
-    margin-left: 30px;
-    margin-right: 30px;
-    width: 70%;
+    margin-right: 2%;
+    width: 72%;
 }
 .secondFirst + div {
-    width: 30%;
-    padding-right: 30px;
-    display: flex;
-    flex-direction: column;
+    width: 28%;
 }
 .secondVoid {
     height: 200px;
@@ -93,4 +96,29 @@ h2 {
 .prefooter2{
     height: 300px;
     background-color: #0C1B23;
+}
+
+
+
+/*----- responsive managment zone... ------------------ */
+@media screen and (max-width: 1100px) { 
+    .secondZone {
+        flex-direction: column ;
+    }
+    .secondZone > div {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+@media screen and (max-width: 700px) {
+    .publish .lraMore {
+        font-size: 10px;
+    }
+    .publications > div {
+        width: 100%;
+        padding: 0px;
+    }
+    h2 {
+        font-size: 18px;
+    }
 }
