--- a/src/components/profilePage/profilePage.css
+++ b/src/components/profilePage/profilePage.css
@@ -146,7 +146,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 50px;
 }
 .pPagePbTitle + div + div > div {
+  margin: 10px;
   max-width: 600px;
 }
