--- a/src/components/global/lPblicationForm/lPblicationForm.css
+++ b/src/components/global/lPblicationForm/lPblicationForm.css
@@ -1,8 +1,11 @@
 .lPblicationForm {
     position: fixed;
-    top:50px;
-    left: 100px;
+    top:50%;
+    left: 50%;
     width: 500px;
+    height: 520px;
+    margin-left: -250px;
+    margin-top: -260px;
     border: solid 1px silver;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     background-color: white;
@@ -41,6 +44,9 @@
 }
 .lPBFCType {
     display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: justify;
 }
 .lPBFCType > div {
     margin-left: 10px;
@@ -52,20 +58,22 @@
     box-sizing: border-box;
     width: 100%;
     height: 50px;
-    border: none;
     padding: 10px;
-    font-size: 14px;
     font-weight: bold;
-    background-color: rgb(240, 240, 240);
+    border: solid 2px rgb(223, 225, 230);
+    color: rgb(40,40,40);
+    border-radius: 0.1em;
+    font-size: 15px;
 }
 .lPBFCType + div + div textarea {
     box-sizing: border-box;
     width: 100%;
-    height: 100px;
-    border: none;
+    height: 150px;
     padding: 10px;
-    font-size: 14px;
-    background-color: rgb(240, 240, 240);
+    border: solid 2px #DFE1E6;
+    color: rgb(40,40,40);
+    border-radius: 0.1em;
+    font-size: 15px;
 }
 .lPBFCType + div + div + div label {
     display: flex;
@@ -80,9 +88,10 @@
     margin-left: 10px;
 }
 .lPBFCType + div + div + div + div {
-    background-color: lightgrey;
+    background-color: #E2E4E6;
     border-radius:0.4em;
     padding: 10px;
+    font-size: 16px;
 }
 
 /* now hover effects -------*/
@@ -92,4 +101,23 @@
 .lPBFCType + div + div + div + div:hover, .lPBFCCross:hover {
     cursor: pointer;
     background-color: rgb(175, 172, 172);
+}
+/* -------------- focused ------------------ */
+.lPblicationForm textarea:focus {
+    border-color:#4C9AFF;
+    border-width: 2px;
+}
+
+
+/* ---------------- responsive managment --------------------- */
+@media screen and (max-width: 520px) { 
+    .lPblicationForm {
+        position: fixed;
+        width: 100%;
+        margin-left: -50%;
+        font-size: 14px;
+    }
+    .lPblicationForm textarea {
+        font-size: 13px;
+    }
 }
