--- a/src/components/global/lPublication/lPublication.css
+++ b/src/components/global/lPublication/lPublication.css
@@ -8,7 +8,7 @@
   overflow: hidden;
   color: rgb(40, 40, 40);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-  font-family: designGraffitiCMS;
+  font-family:Arial;
   word-break: break-all;
 }
 .lPType {
