--- a/src/components/inscription/inscription.css
+++ b/src/components/inscription/inscription.css
@@ -9,17 +9,17 @@
     align-items: center;
     background-color: #F9FAFC;
 }
-.main {
-    width:400px;
-}
-header {
+.inscription header {
     padding-top: 25px;
     padding-bottom: 25px;
 }
-header img {
+.inscription header img {
     width: 90px;
 }
-.main_section {
+.insMain {
+    width:400px;
+}
+.insMainSection {
     box-shadow: 0px 0px 6px 3px rgb(235,235,235);
     padding-bottom: 10px;
 
@@ -28,66 +28,51 @@ header img {
     align-items: center;
     flex-direction:column;
 }
-.title  {
+.insTitle  {
     color: #505F79;
     font-weight: bold;
     margin-bottom: 35px;
     margin-top: 35px;
 }
-.title + div + div {
+.insTitle + div + div {
     width:320px;
     text-align: justify;
     font-size: 12px;
 }
-.input {
+.insInput {
     margin-bottom: 20px;
 }
-.input + div {
-    margin-bottom: 20px;
+.insLaw {
+    margin: 20px;
 }
-.OR {
+.insOR {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.policy {
+.insPolicy {
     width:320px;
     font-size: 12px;
 }
-.policy span {
+.insPolicy span {
     color: #1B64D1;
     cursor: pointer;
 }
-.policy span:hover {
+.insPolicy span:hover {
     text-decoration: underline;
 }
-.with {
-    border-bottom: solid 1px;
-    padding-bottom: 25px;
-    color: rgb(200,200,200);
+.insLast {
     margin-bottom: 20px;
 }
-.with_child1 {
-    margin-bottom: 10px;
-}
-.with_child2 {
-    margin-bottom: 10px;
-}
-.with_child3 {
-    margin-bottom: 10px;
-}
-.last {
-    margin-bottom: 20px;
-}
-.last a {
+.insLast a {
     color: #1B64D1;
     font-size: 14px;
     cursor: pointer;
 }
-.last a:hover {
+.insLast a:hover {
     text-decoration: underline;
 }
 
-.site_lang {
+.insSiteLang {
     padding-top: 40px;
     padding-bottom: 40px;
     border-bottom: solid 1px;
