--- a/src/components/loveProject/loveProject.css
+++ b/src/components/loveProject/loveProject.css
@@ -3,19 +3,19 @@
     left: 0px;
     top:0px;
     width: 100%;
-    word-break: break-all;
 }
 .main div {
     box-sizing: border-box;
 }
 .publish {
-    padding: 2%;
+    padding-top: 20px;
+    padding-bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #0C1B23;
 }
-.publish div {
+.publish > div {
     color: #92D1D3; 
     border:solid 1px;
     font-size: 13px;
@@ -98,7 +98,13 @@ h2 {
     background-color: #0C1B23;
 }
 
-
+/* ---- hover ------------ */
+.publish > div:hover {
+    background-color: #92D1D3; 
+    color:#182c38;
+    border-color: #92D1D3;
+    cursor: pointer;
+  }
 
 /*----- responsive managment zone... ------------------ */
 @media screen and (max-width: 1100px) { 
@@ -111,8 +117,8 @@ h2 {
     }
 }
 @media screen and (max-width: 700px) {
-    .publish .lraMore {
-        font-size: 10px;
+    .publish {
+        font-size: 12px;
     }
     .publications > div {
         width: 100%;
