--- a/src/components/inscription/inscription.css
+++ b/src/components/inscription/inscription.css
@@ -67,6 +67,7 @@
     color: #1B64D1;
     font-size: 14px;
     cursor: pointer;
+    text-decoration: none;
 }
 .insLast a:hover {
     text-decoration: underline;
