some advancing and publication backend done

--- a/src/components/global/lPagination/lPagination.css
+++ b/src/components/global/lPagination/lPagination.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     margin-left: 10px;
-    padding-bottom: 3px;
+    padding: 3px;
 }
 .lPtSLider {
     padding-top:7px!important;    
