--- a/src/components/loveProject/loveProject.css
+++ b/src/components/loveProject/loveProject.css
@@ -3,6 +3,14 @@
     left: 0px;
     top:0px;
     width: 100%;
+    overflow: scroll;
+}
+.main::-webkit-scrollbar {
+    display: none;
+    width: 199px;
+    width: 5px;
+    height: 8px;
+    background-color: #aaa;
 }
 .main div {
     box-sizing: border-box;
