--- a/src/components/global/publicationComment/publicationComment.css
+++ b/src/components/global/publicationComment/publicationComment.css
@@ -5,9 +5,8 @@
   max-width: 700px;
   max-height: 500px;
   margin-left: -250px;
-  margin-top: -250px;
+  margin-top: -300px;
   border: solid 1px;
-  overflow: auto;
   color: rgb(40, 40, 40);
   font-size: 15px;
   background-color: #F5F5F6;
@@ -125,6 +124,8 @@
 
 /*------ the coms zone -------------------------*/
 .pubComComZone {
+  overflow: auto;
+  max-height: 270px;
   border-top: solid silver;
   padding: 20px;
 }
