--- a/src/components/global/lPublication/lPublication.css
+++ b/src/components/global/lPublication/lPublication.css
@@ -27,7 +27,6 @@
 }
 .lPImg img {
   width: 100%;
-  transition: transform 1s;
 }
 .lPDate {
   display: flex;
@@ -41,7 +40,7 @@
 }
 .lPProfile {
   width: 45px;
-  height: 45x;
+  height: 45px;
   overflow: hidden;
   border-radius: 7em;
   display:flex;
@@ -50,7 +49,7 @@
   background-color: gray;
 }
 .lPProfile img {
-  width: 95%;
+  height: 95%;
 }
 .lPAuthor {
   padding-left: 10px;
